tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_discover_flags_t_e.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - discover
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::cache::ParseCache
crate::discover::*

----- stderr -----
