tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_lib.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - lib
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer::Analyzer
crate::discover::{ModuleInfo, ModuleVisibility, TargetInfo, TargetKind}
crate::error::AnalysisError
crate::graph::{AnnotatedEdges, Cycle, DependencyGraph, DependencyGraphOptions, Edge, ShortestPaths}
crate::model::{AnalysisOptions, AnalysisResult}
crate::reference::{GroupItem, PathPrefix, PathSuffix, TypeReference}
crate::rules::{CheckOptions, CheckReport, InitOutcome, Violation, ViolationKind}

----- stderr -----
