tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_lib_flags_r.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer::Analyzer
crate::cache::ParseCache
crate::constants::PATH_QUALIFIER_SELF
crate::constants::{ATTR_CFG, MODULE_NAME_TEST}
crate::constants::{LIB_FILE_NAME, MAIN_FILE_NAME, MODULE_FILE_NAME}
crate::constants::{PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::discover::CrateInfo
crate::discover::CrateInfoError
crate::discover::{CrateInfo, CrateInfoError, ModuleInfo, ModuleVisibility, Result, TargetInfo}
crate::discover::{CrateInfo, ModuleInfo, TargetInfo, TargetKind}
crate::discover::{ModuleInfo, ModuleVisibility, TargetInfo, TargetKind}
crate::error::AnalysisError
crate::error::AnalysisError::ModuleNotFound
crate::error::Result
crate::error::{AnalysisError, Result}
crate::graph::Cycle
crate::graph::DependencyGraphOptions
crate::graph::Edge
crate::graph::build_edges
crate::graph::cycles::Cycle
crate::graph::cycles::detect_cycles
crate::graph::edges
crate::graph::edges::AnnotatedEdges
crate::graph::edges::build_edges
crate::graph::edges::resolve_reference_target
crate::graph::edges::truncate_module_path
crate::graph::edges::{AnnotatedEdges, Edge}
crate::graph::edges::{AnnotatedEdges, truncate_module_path}
crate::graph::orphans::find_orphans
crate::graph::paths::ShortestPaths
crate::graph::paths::compute_shortest_paths
crate::graph::resolve_reference_target
crate::graph::truncate_module_path
crate::graph::{AnnotatedEdges, Cycle, DependencyGraph, DependencyGraphOptions, Edge, ShortestPaths}
crate::graph::{Cycle, DependencyGraph}
crate::graph::{self, DependencyGraph, DependencyGraphOptions}
crate::model::AnalysisResult
crate::model::{AnalysisOptions, AnalysisResult}
crate::module_path::is_in_subtree
crate::module_path::split_parent
crate::module_path::{is_in_subtree, parent_module}
crate::module_path::{is_in_subtree, split_parent}
crate::parser::CrateAnalyzer
crate::parser::visitor
crate::parser::visitor::ModuleVisitor
crate::reference::GroupItem::Aliased
crate::reference::GroupItem::Glob
crate::reference::GroupItem::Simple
crate::reference::PathPrefix::None
crate::reference::PathPrefix::Super
crate::reference::TypeReference
crate::reference::{GroupItem, PathPrefix, PathSuffix, TypeReference}
crate::reference::{GroupItem, PathPrefix, TypeReference}
crate::reference::{PathPrefix, TypeReference}
crate::resolve::resolve_glob
crate::rules::eval::evaluate
crate::rules::evaluate
crate::rules::load::{resolve_config_path, scaffold_config}
crate::rules::resolve_config_path
crate::rules::scaffold_config
crate::rules::{AllowedCycle, CheckReport, LayerPos, RuleSet, Violation, ViolationKind, is_parent_child_cycle}
crate::rules::{AllowedCycle, DenyRule, InitOutcome, LayerRule, ModulePattern, RestrictRule, RuleSet, is_parent_child_cycle}
crate::rules::{CheckOptions, CheckReport, InitOutcome, Violation, ViolationKind}
crate::rules::{self, CheckOptions, CheckReport, InitOutcome, RuleSet}
crate::utils::has_cfg_test
crate::utils::{ReadFileError, descend_inline_module, read_source_file}
crate::utils::{ReadFileError, has_cfg_test, read_source_file}
crate::utils::{descend_inline_module, read_source_file}

----- stderr -----
